--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
       </tr>
     </table>
     <hr size="3">
-    <a href="Contact.html">Contact Me</a>
+    <a href="contact.html">Contact Me</a>
   </body>
 </html>
